--- a/coder-swag/coder-swag/Base.lproj/Main.storyboard
+++ b/coder-swag/coder-swag/Base.lproj/Main.storyboard
@@ -83,11 +83,115 @@
                     <navigationItem key="navigationItem" title="CODER SWAG" id="aNJ-8c-Suc"/>
                     <connections>
                         <outlet property="categoryTable" destination="6AP-cL-U4y" id="hf2-MB-uqE"/>
+                        <segue destination="57n-dm-kTC" kind="show" id="wqH-xO-jiB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="909.60000000000002" y="688.60569715142435"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="PyH-tG-oN2">
+            <objects>
+                <viewController id="57n-dm-kTC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KwL-dJ-hAc"/>
+                        <viewControllerLayoutGuide type="bottom" id="t9z-gv-jFH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="651-xO-3OH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PRODUCTS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v1d-wV-frN">
+                                <rect key="frame" x="16" y="30" width="175" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="Ga2-dX-HqM"/>
+                                    <constraint firstAttribute="width" constant="175" id="ahy-Pq-V3F"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rxa-xF-li2">
+                                <rect key="frame" x="16" y="71" width="343" height="532"/>
+                                <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2wZ-1h-req">
+                                    <size key="itemSize" width="144" height="261"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="7de-iM-OMA" customClass="ProductCell" customModule="coder_swag" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="144" height="261"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="144" height="261"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="shirt01" translatesAutoresizingMaskIntoConstraints="NO" id="dqh-gT-SNE">
+                                                    <rect key="frame" x="0.0" y="0.0" width="144" height="172"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="178" id="Vf7-wM-2bv"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$25" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktj-Lq-HWL">
+                                                    <rect key="frame" x="8" y="238" width="128" height="10"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
+                                                    <color key="textColor" red="0.4756349325" green="0.47564673419999998" blue="0.47564041610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Devslopes Logo Graphic T-Shirt" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ey-xm-Lbh">
+                                                    <rect key="frame" x="8" y="180" width="128" height="48"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="48" id="QVh-eJ-UIj"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="48" id="R2A-pI-JVG"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="13"/>
+                                                    <color key="textColor" red="0.4756349325" green="0.47564673419999998" blue="0.47564041610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailingMargin" secondItem="ktj-Lq-HWL" secondAttribute="trailing" id="1Jq-6n-qYV"/>
+                                            <constraint firstItem="7ey-xm-Lbh" firstAttribute="top" secondItem="dqh-gT-SNE" secondAttribute="bottom" constant="9" id="Cc2-oV-bEv"/>
+                                            <constraint firstItem="ktj-Lq-HWL" firstAttribute="top" secondItem="7ey-xm-Lbh" secondAttribute="bottom" constant="3" id="R5J-Op-NBA"/>
+                                            <constraint firstAttribute="trailing" secondItem="dqh-gT-SNE" secondAttribute="trailing" id="Wv2-Cg-pAp"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="7ey-xm-Lbh" secondAttribute="trailing" id="Ygl-So-Hyf"/>
+                                            <constraint firstItem="7ey-xm-Lbh" firstAttribute="trailing" secondItem="7de-iM-OMA" secondAttribute="trailingMargin" id="fAT-z6-waG"/>
+                                            <constraint firstItem="dqh-gT-SNE" firstAttribute="top" secondItem="7de-iM-OMA" secondAttribute="top" id="frI-8F-Byn"/>
+                                            <constraint firstItem="7ey-xm-Lbh" firstAttribute="leading" secondItem="7de-iM-OMA" secondAttribute="leadingMargin" id="gE8-as-7jJ"/>
+                                            <constraint firstItem="dqh-gT-SNE" firstAttribute="leading" secondItem="7de-iM-OMA" secondAttribute="leading" id="h9u-Rn-GEJ"/>
+                                            <constraint firstItem="ktj-Lq-HWL" firstAttribute="leading" secondItem="7de-iM-OMA" secondAttribute="leadingMargin" id="lYE-HC-s7p"/>
+                                            <constraint firstItem="7ey-xm-Lbh" firstAttribute="top" secondItem="dqh-gT-SNE" secondAttribute="bottom" constant="9" id="mDF-hh-ilZ"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="ktj-Lq-HWL" secondAttribute="bottom" constant="5" id="tmN-Ib-TRd"/>
+                                            <constraint firstItem="7ey-xm-Lbh" firstAttribute="leading" secondItem="7de-iM-OMA" secondAttribute="leadingMargin" id="xic-B3-RPc"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="productImage" destination="dqh-gT-SNE" id="ypr-2G-u0P"/>
+                                            <outlet property="productPrice" destination="ktj-Lq-HWL" id="iwB-vI-kEs"/>
+                                            <outlet property="productTitle" destination="7ey-xm-Lbh" id="0TU-GX-oao"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="rxa-xF-li2" firstAttribute="top" secondItem="v1d-wV-frN" secondAttribute="bottom" constant="16" id="0Vq-eX-CEa"/>
+                            <constraint firstItem="rxa-xF-li2" firstAttribute="leading" secondItem="651-xO-3OH" secondAttribute="leadingMargin" id="6Xl-au-xKJ"/>
+                            <constraint firstItem="v1d-wV-frN" firstAttribute="leading" secondItem="651-xO-3OH" secondAttribute="leadingMargin" id="8gg-GL-fLt"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="rxa-xF-li2" secondAttribute="trailing" id="B3V-JR-MHS"/>
+                            <constraint firstItem="v1d-wV-frN" firstAttribute="top" secondItem="KwL-dJ-hAc" secondAttribute="bottom" constant="30" id="Kc7-u5-qli"/>
+                            <constraint firstItem="t9z-gv-jFH" firstAttribute="top" secondItem="rxa-xF-li2" secondAttribute="bottom" id="dZL-Bw-NOv"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PGC-a5-emF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1741.5999999999999" y="688.60569715142435"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="DJu-lt-LrQ">
@@ -97,6 +201,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="9FB-to-1LV">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="barTintColor" red="0.3411764705882353" green="0.15294117647058825" blue="0.15686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="largeTitleTextAttributes">
                             <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -114,5 +219,6 @@
     </scenes>
     <resources>
         <image name="digital" width="1024" height="703"/>
+        <image name="shirt01" width="500" height="500"/>
     </resources>
 </document>
