--- a/coder-swag/coder-swag/Base.lproj/Main.storyboard
+++ b/coder-swag/coder-swag/Base.lproj/Main.storyboard
@@ -129,8 +129,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="144" height="261"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="shirt01" translatesAutoresizingMaskIntoConstraints="NO" id="dqh-gT-SNE">
-                                                    <rect key="frame" x="0.0" y="0.0" width="144" height="172"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shirt01" translatesAutoresizingMaskIntoConstraints="NO" id="dqh-gT-SNE">
+                                                    <rect key="frame" x="0.0" y="0.0" width="144" height="178"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="178" id="Vf7-wM-2bv"/>
                                                     </constraints>
